@@ -11,7 +11,7 @@
 	</tr>
 		
 	<tr class="even">
-		<td><em>Root Category</eh>
+		<td><em>Root Category</em></td>
 		<td><jwc id="inputRootLevel"/></td>
 	</tr>
 
